# llm-comparison

./: README.md  pyproject.toml
data/: llm_responses.csv  qa_dataset.csv  random_names.txt
llm_comparison/: custom_types.py  generators.py  llm_api.py  visualizers.py
notebooks/: comparison.ipynb  data_generation.ipynb  queries_and_comparison.ipynb
